# PackSquash

./: .all-contributorsrc  .editorconfig  .gitattributes  .gitignore  404.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Gemfile  README.md  README.txt  SECURITY.md  _config.yml  about.toml  build.rs  build_deb.sh  clippy.toml  crowdin.yml  deny.toml  index.html  index.md  params.json  rustfmt.toml  system_id_generator.md  test.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: attach_binaries_to_release.yml  build.yml  ci.yml  docker.yml  generate_gui_updater_objects.yml  rust.yml  wiki-sync.yml
_layouts/: default.html  redirection_page.html
appimage/: recipe.yml
assets/css/: style.scss
assets/js/: system_id_generator.js
common/assets/: com.github.comunidadaylas.packsquash.desktop  packsquash.desktop
dev/benches/: data.js  index.html
docs/: README.md
docs/wiki/: Generated-ZIP-file-reuse-feature-design.md  Getting-started.md  Home.md  Integrating-PackSquash-with-ItemsAdder.md  Integrating-PackSquash-with-your-application.md  New-release-checklist-(for-maintainers).md  Options-files.md  Tips-and-resources-for-pack-authoring.md  Troubleshooting-pack-processing-errors.md  _Sidebar.md
links/: Optimizing-TTF-fonts.md  Options-files.md  Too-big-PNG-help.md  Troubleshooting-file-processing-errors.md  Troubleshooting-pack-processing-errors.md  Volatile-system-ID-help.md
scripts/: README.html2textrc  build_appimage.sh  build_deb.sh  generate_extended_deb_description.sh  manual_packsquash_test.sh
scripts/bundles/appimage/: build.sh
scripts/bundles/deb/: build.sh
scripts/test-packs/: common.inc  decrypt.sh  download-gdrive-packs-folder.py  download.sh  encrypt.sh  generate-password.sh  requirements.txt  sample-pack.py
src/: lib.rs  main.rs  micro_zip.rs  pack_file.rs  pack_meta.rs  resource_pack_file.rs  squash_zip.rs  vfs.rs  zopfli_iterations_time_model.rs
src/config/: mod.rs
src/pack_file/: asset_type.rs  audio_file.rs  json_file.rs  passthrough_file.rs  png_file.rs  properties_file.rs  shader_file.rs  util.rs
src/pack_file/audio_file/: tests.rs
src/pack_file/json_file/: debloater.rs  example_minified_and_debloated.json  example_prettified.json  tests.rs
src/pack_file/passthrough_file/: tests.rs
src/pack_file/png_file/: tests.rs
src/pack_file/properties_file/: example.properties  example_minified.properties  tests.rs
src/pack_file/shader_file/: example.fsh  tests.rs
src/pack_meta/: tests.rs
src/resource_pack_file/: audio_file.rs  json_file.rs  passthrough_file.rs  png_file.rs  properties_file.rs  shader_file.rs  util.rs
src/resource_pack_file/audio_file/: tests.rs
src/resource_pack_file/json_file/: debloater.rs  tests.rs
src/resource_pack_file/png_file/: tests.rs
src/resource_pack_file/properties_file/: tests.rs
src/resource_pack_file/shader_file/: example.fsh  example_minified.fsh  tests.rs
src/squash_zip/: README.md  buffered_async_spooled_temp_file.rs  double_offset_stream_decorator.rs  file_region_comparator.rs  obfuscation_engine.rs  relative_path.rs  system_id.rs  system_time_sanitizer.rs  tests.rs  zip_file_record.rs
src/squash_zip/buffered_async_spooled_temp_file/: tests.rs
src/squash_zip/double_offset_stream_decorator/: tests.rs
src/squash_zip/file_region_comparator/: tests.rs
src/squash_zip/system_id/: os.rs  tests.rs
src/squash_zip/system_time_sanitizer/: tests.rs
src/squash_zip/zip_file_record/: tests.rs
src/vfs/: os_fs.rs
tools/: system-id-generator.md
