[workspace]
members = ["packages/*"]
resolver = "2"

[patch.crates-io]
# Use our fork of glsl-lang that allows it to parse #moj_import directives
glsl-lang = { git = "https://github.com/ComunidadAylas/glsl-lang" }
glsl-lang-lexer = { git = "https://github.com/ComunidadAylas/glsl-lang" }
glsl-lang-pp = { git = "https://github.com/ComunidadAylas/glsl-lang" }
glsl-lang-types = { git = "https://github.com/ComunidadAylas/glsl-lang" }

# Use our fork of mmap, pulled by development dependencies for benchmarking, to fix its
# dependency on unmaintained crates and reduce duplicate dependency versions. Some of
# the changes were authored by jbreitbart.
# Related PR: https://github.com/rbranson/rust-mmap/pull/13
mmap = { git = "https://github.com/ComunidadAylas/rust-mmap" }

# Use a branch with several PRs we submitted for updating the libspng version their Rust
# bindings link to, and several other minor dependency updates.
# This is a best-effort fix for memory management errors in libspng v0.7.0-rc2 when
# decoding PNGs with color palettes on ARM CPUs with NEON extensions, as reported by
# a PackSquash user of an M1 Pro, and other ARM users in other projects:
# https://github.com/lovell/sharp/issues/3222
# We could not reproduce the reported PackSquash issue on an ARM Ubuntu 22.04 virtual
# machine with an Ampere Altra Neoverse-N1 CPU using the musl binaries with mimalloc,
# so it may be dependent on the malloc implementation or other environment factors
spng = { git = "https://github.com/ComunidadAylas/spng-rs", branch = "pr-amalgamation" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
strip = "none"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
# deny instead of forbid is required by the thread_local macro with const initializers
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
cargo = "warn"
pedantic = "warn"

[workspace.lints.rustdoc]
invalid_html_tags = "deny"
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
