[workspace]
members = ["packages/*"]
resolver = "2"

[patch.crates-io]
# Use our fork of glsl-lang that allows it to parse #moj_import directives
glsl-lang = { git = "https://github.com/ComunidadAylas/glsl-lang" }
glsl-lang-lexer = { git = "https://github.com/ComunidadAylas/glsl-lang" }
glsl-lang-pp = { git = "https://github.com/ComunidadAylas/glsl-lang" }
glsl-lang-types = { git = "https://github.com/ComunidadAylas/glsl-lang" }

# Use our fork of mmap, pulled by development dependencies for benchmarking, to fix its
# dependency on unmaintained crates and reduce duplicate dependency versions. Some of
# the changes were authored by jbreitbart.
# Related PR: https://github.com/rbranson/rust-mmap/pull/13
mmap = { git = "https://github.com/ComunidadAylas/rust-mmap" }

# Use an Oxipng PR that significantly reduces build dependencies and time in our use case:
# https://github.com/shssoichiro/oxipng/pull/645
oxipng = { git = "https://github.com/shssoichiro/oxipng", branch = "refactor/mangen-xtask" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
strip = "none"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
# deny instead of forbid is required by the thread_local macro with const initializers
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
#pedantic = "warn" # TODO too pedantic for now, fix the warnings and re-enable this sooner than later
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"         # Introduces much noise, not better than cargo deny

[workspace.lints.rustdoc]
invalid_html_tags = "deny"
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
